# Copyright (C) 2000 Doobee R. Tzeck <drt@ailis.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# Install m4 macros in this directory
m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros = lf_cc.m4 lf_cxx.m4 lf_warnings.m4 lf_host_type.m4

# The following is boilerplate
m4data_DATA = $(m4macros) 
EXTRA_DIST = $(m4data_DATA) 

